2012-11-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: tweak whitespace in verbose mode
        * src/Attributes.cpp: refactor code generators; use single module
        for exports

2012-11-05  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: added class CppInheritedProperty to handle 
        inherited properties
        * include/Rcpp/module/class.h: implemented inheritance of properties

2012-11-05  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use modules for attribute code generation
        * src/Attributes.cpp: use modules for attribute code generation
        * src/AttributesParser.h: use modules for attribute code generation
        * src/AttributesParser.cpp: use modules for attribute code generation

2012-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* tests/doRUnit.R: In "development releases" (such as 0.9.15.5) we
	now default to setting the required CRAN-test-workaround-kludge
	"RunAllRcppTests" to "yes" as a default -- but not for actual
	releases (with versions such as 0.9.15)

2012-11-04  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h: fixed module bug (virtual function
        was not defined)

2012-11-03  JJ Allaire <jj@rstudio.org>

        * Use CLINK_CPPFLAGS rather than PKG_CXXFLAGS for LinkingTo
        include directories (identical behavior to inline)

2012-11-03  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/which_min.h : sugar which.min
        * include/Rcpp/sugar/functions/which_max.h : sugar which.max
        * include/Rcpp/module/Module.h : added get_function_ptr which returns
        the pointer of the target function as a DL_FUNC

2012-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.rmath.R: More tests added

2012-11-02  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h : factored CppFunction in its own