@@ -1,8 +1,10 @@
 2012-11-06  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: tweak whitespace in verbose mode
-        * src/Attributes.cpp: refactor code generators; use single module
-        for exports
+        * src/AttributesParser.h: support for interfaces attribute
+        * src/AttributesParser.cpp: support for interfaces attribute
+        * src/Attributes.cpp: support for interfaces attribute; refactor 
+        code generators; use single module for exports
 
 2012-11-05  Romain Francois <romain@r-enthusiasts.com>
 
